--- a/src/pages/Arena/components/TeamPanel/TeamPanel.scss
+++ b/src/pages/Arena/components/TeamPanel/TeamPanel.scss
@@ -180,7 +180,7 @@
       min-width: 60px;
       min-height: 60px;
       max-height: 60px;
-      margin-top: 0.5rem;
+      margin-top: 0.8rem;
     }
 
     .mchip__frame {
@@ -235,7 +235,7 @@
     }
 
     .mchip__quota {
-      margin-top: 0.25rem;
+      margin-top: 0.4rem;
     }
 
     .mchip__quota-pip {
